About me page added

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en" dir="ltr">
 
 <head>
+
   <meta charset="utf-8">
+  <link rel="stylesheet" href="assets/homepage.css">
   <title>Ayush Homepage</title>
-  <style media="screen">
-    img {
-      border-radius: 50%;
-    }
-  </style>
+
 </head>
 
 <body>
   <img src="images/Ayush.jpg" alt="Ayush image" style="width:300px">
-  <h1>Ayush Bhattarai</h1>
-  <ul>
+  <div>
+    <h1 class="name-label">Ayush Bhattarai</h1>
+  </div>
+  <a class="about-me" href="about_me.html">About Me</a>
+  <ul class = "ul-label">
     <li>Lesson 1:
       <ul>
         <li><a href="#">Lab 1</a></li>
