--- a/about_me.html
+++ b/about_me.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/aboutMe.css">
-    <title>About Me</title>
 
-  </head>
-  <body>
-    <h1>About Ayush Bhattarai</h1>
+<head>
 
-    <p>My name is Ayush Bhattarai and I am from <span class="text-bg">Nepal</span>. I am <span class="text-bg">enthusiastic</span>, and I love <span class="text-bg">Computer Science</span>.</p>
-    <hr>
-    <h2>My classes This Quarter</h2>
-    <ul>
-      <li>MPP</li>
-      <li>SE</li>
-      <li>WAP</li>
-      <li>WAA</li>
-      <li>MWA</li>
-    </ul>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="assets/aboutMe.css">
+  <title>About Me</title>
 
-    <h2>My Favourite Movies</h2>
-    <em>(I watch a lot of movies, and there are many favourites. Here's a few..)</em>
-    <ol>
-      <li>The Shawshank Redemption (<a class="a-imdb" href="https://www.imdb.com/title/tt0111161/">IMDB</a>)</li>
-      <li>The Perks of Being a Wallflower (<a class="a-imdb" href="https://www.imdb.com/title/tt1659337/">IMDB</a>)</li>
-      <li>Harry Potter and the Deathly Hallows(<a class="a-imdb" href="https://www.imdb.com/title/tt1201607/">IMDB</a>)</li>
-    </ol>
+</head>
 
-    <h2>My Moods</h2>
-    Happy: <img src="images/HappyFace.jpg" alt=""> Sad: <img src="images/sadFace.png" alt="">
+<body>
+  <h1>About Ayush Bhattarai</h1>
 
-    <h2>Fun Facts About My Neighbors</h2>
-    <ul>
-      <li>Samsher Bahadur: <em>Humorous</em> is word that describes him.</li>
-      <li>Pradip Acharya: He is really good in <em>Frontend</em> technologies.</li>
-    </ul>
+  <p>My name is Ayush Bhattarai and I am from <span class="text-bg">Nepal</span>. I am <span class="text-bg">enthusiastic</span>, and I love <span class="text-bg">Computer Science</span>.</p>
+  <hr>
+  <h2>My classes This Quarter</h2>
+  <ul>
+    <li>MPP</li>
+    <li>SE</li>
+    <li>WAP</li>
+    <li>WAA</li>
+    <li>MWA</li>
+  </ul>
 
-    <a class="text-bg" href="index.html">Back to Home</a>
-  </body>
+  <h2>My Favourite Movies</h2>
+  <em>(I watch a lot of movies, and there are many favourites. Here's a few..)</em>
+  <ol>
+    <li>The Shawshank Redemption (<a class="a-imdb" href="https://www.imdb.com/title/tt0111161/">IMDB</a>)</li>
+    <li>The Perks of Being a Wallflower (<a class="a-imdb" href="https://www.imdb.com/title/tt1659337/">IMDB</a>)</li>
+    <li>Harry Potter and the Deathly Hallows(<a class="a-imdb" href="https://www.imdb.com/title/tt1201607/">IMDB</a>)</li>
+  </ol>
+
+  <h2>My Moods</h2>
+  Happy: <img class="images" src="images/HappyFace.jpg" alt=""> Sad: <img class="images" src="images/sadFace.png" alt="">
+
+  <h2>Fun Facts About My Neighbors</h2>
+  <ul>
+    <li>Samsher Bahadur: <em>Humorous</em> is word that describes him.</li>
+    <li>Pradip Acharya: He is really good in <em>Frontend</em> technologies.</li>
+  </ul>
+
+  <a class="text-bg" href="index.html">Back to Home</a>
+  <p>
+    <a href="https://validator.w3.org/check/referer">
+      <img src="http://mumstudents.org/cs472/images/w3c-html.png" alt="Validate" />
+    </a>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+      <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Validate" />
+    </a>
+  </p>
+</body>
 
 </html>
