movie details and css

--- a/about_me.html
+++ b/about_me.html
@@ -26,9 +26,28 @@
   <h2>My Favourite Movies</h2>
   <em>(I watch a lot of movies, and there are many favourites. Here's a few..)</em>
   <ol>
-    <li>The Shawshank Redemption (<a class="a-imdb" href="https://www.imdb.com/title/tt0111161/">IMDB</a>)</li>
-    <li>The Perks of Being a Wallflower (<a class="a-imdb" href="https://www.imdb.com/title/tt1659337/">IMDB</a>)</li>
-    <li>Harry Potter and the Deathly Hallows(<a class="a-imdb" href="https://www.imdb.com/title/tt1201607/">IMDB</a>)</li>
+    <li>The Shawshank Redemption (<a target="_blank" class="a-imdb" href="https://www.imdb.com/title/tt0111161/">IMDB</a>)
+    <ul style="list-style: none; padding:0" >
+      <li>
+         <span class="text-bg movie-font">Director</span> <br/>
+         <span class="p-movie">Frank Darabont</span>
+      </li>
+      <li>
+         <span class="text-bg movie-font">Genre</span> <br/>
+         <span class="p-movie">Drama/Prison</span>
+      </li>
+      <li>
+         <span class="text-bg movie-font">Tagline</span> <br/>
+         <span class="p-movie">Fear can hold you prisoner. Hope can set you free</span>
+      </li>
+      <li>
+         <span class="text-bg movie-font">Plot Outline</span> <br/>
+         <span class="p-movie">Andy Dufresne (Tim Robbins) is sentenced to two consecutive life terms in prison for the murders of his wife and her lover and..(<a target="_blank" class="a-imdb" href="https://www.google.com/search?q=the+shawshank+redemption+plot">More</a>)
+</span>
+      </li>
+    </ul> </li>
+    <li>The Perks of Being a Wallflower (<a target="_blank" class="a-imdb" href="https://www.imdb.com/title/tt1659337/">IMDB</a>)</li>
+    <li>Harry Potter and the Deathly Hallows(<a target="_blank" class="a-imdb" href="https://www.imdb.com/title/tt1201607/">IMDB</a>)</li>
   </ol>
 
   <h2>My Moods</h2>
