--- a/Recipe/recipe.html
+++ b/Recipe/recipe.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/recipe.css">
+    <link rel="shortcut icon" href="images/pie_icon.gif">
     <title>Grandma's Lemon Meringue Pie</title>
   </head>
   <body>
@@ -17,17 +18,17 @@
 
     <h1 class="underline">INGREDIENTS</h1>
     <ul>
-      <li>1 cup white sugar</li>
-      <li>2 <span class="underline" title="tablespoons">tbsp</span> all-purpose flour</li>
-      <li>3 <span class="underline" title="tablespoons">tbsp</span> cornstarch</li>
-      <li>1/4 <span class="underline" title="teaspoon">tsp</span> salt</li>
-      <li>1 1/2 cups water</li>
-      <li>2 lemons, juiced and zested</li>
-      <li>2 <span class="underline" title="tablespoons">tbsp</span> butter</li>
-      <li>4 egg yolks, beaten</li>
-      <li>1 (9 inch) pie crust, baked</li>
-      <li>4 egg whites</li>
-      <li>6 <span class="underline" title="tablespoons">tbsp</span> white sugar</li>
+      <li class="list-image">1 cup white sugar</li>
+      <li class="list-image">2 <span class="underline" title="tablespoons">tbsp</span> all-purpose flour</li>
+      <li class="list-image">3 <span class="underline" title="tablespoons">tbsp</span> cornstarch</li>
+      <li class="list-image">1/4 <span class="underline" title="teaspoon">tsp</span> salt</li>
+      <li class="list-image">1 1/2 cups water</li>
+      <li class="list-image">2 lemons, juiced and zested</li>
+      <li class="list-image">2 <span class="underline" title="tablespoons">tbsp</span> butter</li>
+      <li class="list-image">4 egg yolks, beaten</li>
+      <li class="list-image">1 (9 inch) pie crust, baked</li>
+      <li class="list-image">4 egg whites</li>
+      <li class="list-image">6 <span class="underline" title="tablespoons">tbsp</span> white sugar</li>
     </ul>
     <hr>
 
@@ -36,22 +37,22 @@
       <li><span class="make-bold">Preheat Oven</span>: Preheat oven to 350 degrees F (175 degrees C).</li>
       <li><span class="make-bold">Make Lemon Filling</span>: In a medium saucepan ...
         <ul>
-          <li>Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
-          <li>Stir in water, lemon juice and lemon zest.</li>
-          <li>Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
-          <li>Stir in butter.</li>
-          <li>Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
-          <li>Whisk egg yolk mixture back into remaining sugar mixture.</li>
-          <li>Bring to a boil and continue to cook while stirring constantly until thick.</li>
-          <li>Remove from heat.</li>
-          <li>Pour filling into baked pastry shell.</li>
+          <li class="list-image">Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
+          <li class="list-image">Stir in water, lemon juice and lemon zest.</li>
+          <li class="list-image">Cook over medium-high heat, stirring frequently, until mixture comes to a boil.</li>
+          <li class="list-image">Stir in butter.</li>
+          <li class="list-image">Place egg yolks in a small bowl and gradually whisk in 1/2 cup of hot sugar mixture.</li>
+          <li class="list-image">Whisk egg yolk mixture back into remaining sugar mixture.</li>
+          <li class="list-image">Bring to a boil and continue to cook while stirring constantly until thick.</li>
+          <li class="list-image">Remove from heat.</li>
+          <li class="list-image">Pour filling into baked pastry shell.</li>
         </ul>
       </li>
       <li><span class="make-bold">Make Meringue</span>: In a large glass or metal bowl ...
       <ul>
-        <li>Whip egg whites until foamy.</li>
-        <li>Add sugar gradually, and continue to whip until stiff peaks form.</li>
-        <li>Spread meringue over pie, sealing the edges at the crust.</li>
+        <li class="list-image">Whip egg whites until foamy.</li>
+        <li class="list-image">Add sugar gradually, and continue to whip until stiff peaks form.</li>
+        <li class="list-image">Spread meringue over pie, sealing the edges at the crust.</li>
       </ul>
       </li>
       <li><span class="make-bold">Bake</span>: Bake in preheated oven for 10 minutes, or until meringue is golden brown.</li>
@@ -78,7 +79,7 @@
   <h1 class="underline">LINKS</h1>
   <a class="links" href="https://www.google.com/search?q=lemon+meringue+pie+recipe">Search for other lemon merinue pie recipes</a>
   <br>
-  <a class="links" href="/index.html">Home</a>
+  <a class="links" href="/WAP-Assignment/index.html">Home</a>
 
   <p class="copyright">Copyright © 2012 Granny's Pies
   <br>A Granny's Pies Production
