--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
   <ul class = "ul-label">
     <li>Lesson 1:
       <ul>
-        <li><a href="#">Lab 1</a></li>
+        <li><a href="index.html">Exercise 1</a></li>
       </ul>
     </li>
-    <li>Lesson 2</li>
+    <li>Lesson 2:
+      <ul>
+        <li><a href="about_me.html">Exercise 1</a></li>
+        <li><a href="Recipe/recipe.html">Exercise 2</a></li>
+      </ul>
+    </li>
     <li>Lesson 3</li>
     <li>Lesson 4</li>
   </ul>
