--- a/tmnt/tmnt.html
+++ b/tmnt/tmnt.html
@@ -1,342 +1,220 @@
 <!DOCTYPE html>
 <!-- saved from url=(0074)http://mumstudents.org/cs472/2019-07-RS/Homework/2/resources/skeleton.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>TMNT - Rancid Tomatoes</title>
+<html>
 
-		<link href="./css/tmnt.css" type="text/css" rel="stylesheet">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<title>TMNT - Rancid Tomatoes</title>
 
-	</head>
+	<link href="./css/tmnt.css" type="text/css" rel="stylesheet">
 
-	<body class="body-bk-img">
-		<div class="top-image">
-			<img src="./images
+</head>
+
+<body class="body-bk-img">
+	<div class="top-image">
+		<img src="./images
 			/banner.png" alt="Rancid Tomatoes">
-		</div>
+	</div>
 
-		<h1 class="movie-name">TMNT (2007)</h1>
+	<h1 class="movie-name">TMNT (2007)</h1>
 
-		<div class="main-content">
-            <aside class="left-aside">
-                <section>
-                    <img src="images/rottenbig.png" alt="rottenbig.png">
-                    <span class="rating-txt">33%</span>
-                </section>
-								<section>
-                    <div class="left-column mt-10">
+	<div class="main-content">
+		<div class="top-maincontent">
+			<aside class="left-aside">
+				<section>
+					<img src="images/rottenbig.png" alt="rottenbig.png">
+					<span class="rating-txt">33%</span>
+				</section>
+				<section>
+					<div class="left-column mt-10">
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990
+								live-action movie.</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Peter Debruge <br>
-												<span style="font-style:italic">Variety</span>
-											</p>
+							Peter Debruge <br>
+							<span style="font-style:italic">Variety</span>
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/fresh.gif" alt="Fresh">
-												<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Todd Gilchrist <br>
-												<span style="font-style:italic">IGN Movies</span>
-											</p>
+							Todd Gilchrist <br>
+							<span style="font-style:italic">IGN Movies</span>
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>It stinks!</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>It stinks!</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Jay Sherman (unemployed) <br> samsh
-											</p>
+							Jay Sherman (unemployed) <br> samsh
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Joshua Tyler <br>
-												<span style="font-style:italic">CinemaBlend.com</span>
-											</p>
+							Joshua Tyler <br>
+							<span style="font-style:italic">CinemaBlend.com</span>
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>YOUR REVIEW HERE</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>YOUR REVIEW HERE</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												NAME <br>
-												<span style="font-style:italic">PUBLICATION</span>
-											</p>
+							NAME <br>
+							<span style="font-style:italic">PUBLICATION</span>
+						</p>
 
-                    </div>
+					</div>
 
-                    <div class="left-column mt-10">
-											<p class="comment-box">
-												<img class="float-img" src="./images
+					<div class="left-column mt-10">
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Jeannette Catsoulis <br>
-												<span style="font-style:italic">New York Times</span>
-											</p>
+							Jeannette Catsoulis <br>
+							<span style="font-style:italic">New York Times</span>
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Ed Gonzalez <br>
-												<span style="font-style:italic">Slant Magazine</span>
-											</p>
+							Ed Gonzalez <br>
+							<span style="font-style:italic">Slant Magazine</span>
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/fresh.gif" alt="Fresh">
-												<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
-											</p>
+							<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
+						</p>
 
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Mark Palermo <br>
-												<span style="font-style:italic">Coast (Halifax, Nova Scotia)</span>
-											</p>
+							Mark Palermo <br>
+							<span style="font-style:italic">Coast (Halifax, Nova Scotia)</span>
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												Steve Rhodes <br>
-												<span style="font-style:italic">Internet Reviews</span>
-											</p>
+							Steve Rhodes <br>
+							<span style="font-style:italic">Internet Reviews</span>
+						</p>
 
-											<p class="comment-box">
-												<img class="float-img" src="./images
+						<p class="comment-box">
+							<img class="float-img" src="./images
 												/rotten.gif" alt="Rotten">
-												<q>YOUR REVIEW HERE</q>
-											</p>
-											<p class="critic-cmt">
-												<img class="float-img" src="./images
+							<q>YOUR REVIEW HERE</q>
+						</p>
+						<p class="critic-cmt">
+							<img class="float-img" src="./images
 												/critic.gif" alt="Critic">
-												NAME <br>
-												<span style="font-style:italic">PUBLICATION</span>
-											</p>
-                    </div>
+							NAME <br>
+							<span style="font-style:italic">PUBLICATION</span>
+						</p>
+					</div>
 
-                </section>
-            </aside>
-            <nav class="right-nav">
-                <img src="images/overview.png" alt="overview.png">
-            </nav>
-            <div class="clear">
+				</section>
+			</aside>
+			<nav class="right-nav color-green">
+				<img src="images/overview.png" alt="overview.png">
+				<div class="movie-details">
+					<dl>
+						<dt>STARRING</dt>
+						<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
 
-            </div>
-        </div>
-		<div>
-			<img src="./images
-			/overview.png" alt="general overview">
+						<dt>DIRECTOR</dt>
+						<dd>Kevin Munroe</dd>
+
+						<dt>RATING</dt>
+						<dd>PG</dd>
+
+						<dt>THEATRICAL RELEASE</dt>
+						<dd>Mar 23, 2007</dd>
+
+						<dt>MOVIE SYNOPSIS</dt>
+						<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
+
+						<dt>MPAA RATING</dt>
+						<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
+
+						<dt>RELEASE COMPANY</dt>
+						<dd>Warner Bros.</dd>
+
+						<dt>RUNTIME</dt>
+						<dd>90 mins</dd>
+
+						<dt>GENRE</dt>
+						<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
+
+						<dt>BOX OFFICE</dt>
+						<dd>$54,132,596</dd>
+
+						<dt>LINKS</dt>
+						<dd>
+							<ul>
+								<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
+								<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
+								<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
+								<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
+							</ul>
+						</dd>
+					</dl>
+				</div>
+			</nav>
 		</div>
-
-		<dl>
-			<dt>STARRING</dt>
-			<dd>Patrick Stewart <br> Mako <br> Sarah Michelle Gellar <br> Kevin Smith</dd>
-
-			<dt>DIRECTOR</dt>
-			<dd>Kevin Munroe</dd>
-
-			<dt>RATING</dt>
-			<dd>PG</dd>
-
-			<dt>THEATRICAL RELEASE</dt>
-			<dd>Mar 23, 2007</dd>
-
-			<dt>MOVIE SYNOPSIS</dt>
-			<dd>After the defeat of their old arch nemesis, The Shredder, the Turtles have grown apart as a family.</dd>
-
-			<dt>MPAA RATING</dt>
-			<dd>PG, for animated action violence, some scary cartoon images and mild language</dd>
-
-			<dt>RELEASE COMPANY</dt>
-			<dd>Warner Bros.</dd>
-
-			<dt>RUNTIME</dt>
-			<dd>90 mins</dd>
-
-			<dt>GENRE</dt>
-			<dd>Action/Adventure, Comedies, Childrens, Martial Arts, Superheroes, Ninjas, Animated Characters</dd>
-
-			<dt>BOX OFFICE</dt>
-			<dd>$54,132,596</dd>
-
-			<dt>LINKS</dt>
-			<dd>
-				<ul>
-					<li><a href="http://www.ninjaturtles.com/">The Official TMNT Site</a></li>
-					<li><a href="http://www.rottentomatoes.com/m/teenage_mutant_ninja_turtles/">RT Review</a></li>
-					<li><a href="http://www.rottentomatoes.com/">RT Home</a></li>
-					<li><a href="http://mumstudents.org/cs472/">CS472</a></li>
-				</ul>
-			</dd>
-		</dl>
-
-		<div>
-			<img src="./images
-			/rottenbig.png" alt="Rotten">
-			33%
+		<div class="btm-maincontent color-green">
+				<p style="text-align:center">(1-10) of 88</p>
 		</div>
+	</div>
 
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>Ditching the cheeky, self-aware wink that helped to excuse the concept's inherent corniness, the movie attempts to look polished and 'cool,' but the been-there animation can't compete with the then-cutting-edge puppetry of the 1990 live-action movie.</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Peter Debruge <br>
-			Variety
-		</p>
-
-		<p>
-			<img src="./images
-			/fresh.gif" alt="Fresh">
-			<q>TMNT is a fun, action-filled adventure that will satisfy longtime fans and generate a legion of new ones.</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Todd Gilchrist <br>
-			IGN Movies
-		</p>
-
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>It stinks!</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Jay Sherman (unemployed)
-		</p>
-
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>The rubber suits are gone and they've been redone with fancy computer technology, but that hasn't stopped them from becoming dull.</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Joshua Tyler <br>
-			CinemaBlend.com
-		</p>
-
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>YOUR REVIEW HERE</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			NAME <br>
-			PUBLICATION
-		</p>
-
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>The turtles themselves may look prettier, but are no smarter; torn irreparably from their countercultural roots, our superheroes on the half shell have been firmly co-opted by the industry their creators once sought to spoof.</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Jeannette Catsoulis <br>
-			New York Times
-		</p>
-
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>Impersonally animated and arbitrarily plotted, the story appears to have been made up as the filmmakers went along.</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Ed Gonzalez <br>
-			Slant Magazine
-		</p>
-
-		<p>
-			<img src="./images
-			/fresh.gif" alt="Fresh">
-			<q>The striking use of image and motion allows each sequence to leave an impression. It's an accomplished restart to this franchise.</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Mark Palermo <br>
-			Coast (Halifax, Nova Scotia)
-		</p>
-
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>The script feels like it was computer generated. This mechanical presentation lacks the cheesy charm of the three live action films.</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			Steve Rhodes <br>
-			Internet Reviews
-		</p>
-
-		<p>
-			<img src="./images
-			/rotten.gif" alt="Rotten">
-			<q>YOUR REVIEW HERE</q>
-		</p>
-		<p>
-			<img src="./images
-			/critic.gif" alt="Critic">
-			NAME <br>
-			PUBLICATION
-		</p>
-
-		<p>(1-10) of 88</p>
-
-		<div>
-			<a href="http://validator.w3.org/check/referer"><img src="./images
+	<div class="validators">
+		<a href="http://validator.w3.org/check/referer"><img src="./images
 				/w3c-html.png" alt="Valid HTML5"></a> <br>
-			<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="./images
+		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="./images
 				/w3c-css.png" alt="Valid CSS"></a>
-		</div>
+	</div>
 
 
-</body></html>
+</body>
+
+</html>
