--- a/tmnt/tmnt.html
+++ b/tmnt/tmnt.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <!-- saved from url=(0074)http://mumstudents.org/cs472/2019-07-RS/Homework/2/resources/skeleton.html -->
-<html>
+
+<html lang="en" dir="ltr">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta charset="utf-8">
 	<title>TMNT - Rancid Tomatoes</title>
 
 	<link href="./css/tmnt.css" type="text/css" rel="stylesheet">
