--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 class="name-label">Ayush Bhattarai</h1>
   </div>
   <a class="about-me" href="about_me.html">About Me</a>
-  <ul class = "ul-label">
+  <ul class="ul-label">
     <li>Lesson 1:
       <ul>
         <li><a href="index.html">Exercise 1</a></li>
@@ -23,12 +23,18 @@
     </li>
     <li>Lesson 2:
       <ul>
-        <li><a href="about_me.html">Exercise 1</a></li>
-        <li><a href="Recipe/recipe.html">Exercise 2</a></li>
+        <li><a href="about_me.html">Exercise 1 (About Me)</a></li>
+        <li><a href="Recipe/recipe.html">Exercise 2 (Recipe)</a></li>
       </ul>
     </li>
     <li>Lesson 3</li>
+    <ul>
+      <li><a href="tmnt/tmnt.html">Exercise 1 (TMNT)</a></li>
+    </ul>
     <li>Lesson 4</li>
+    <ul>
+      <li> <a href="#">Exercise 1 (Form)</a> </li>
+    </ul>
   </ul>
 
   <p>
