--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ul>
     <li>Lesson 4</li>
     <ul>
-      <li> <a href="#">Exercise 1 (Form)</a> </li>
+      <li> <a href="form/form.html">Exercise 1 (Form)</a> </li>
     </ul>
   </ul>
 
