--- a/index.html
+++ b/index.html
@@ -27,14 +27,26 @@
         <li><a href="Recipe/recipe.html">Exercise 2 (Recipe)</a></li>
       </ul>
     </li>
-    <li>Lesson 3</li>
+    <li>Lesson 3:
     <ul>
       <li><a href="tmnt/tmnt.html">Exercise 1 (TMNT)</a></li>
-    </ul>
-    <li>Lesson 4</li>
+    </ul></li>
+    <li>Lesson 4:
     <ul>
       <li> <a href="form/form.html">Exercise 1 (Form)</a> </li>
-    </ul>
+    </ul></li>
+
+    <li>Lesson 5:
+    <ul>
+      <li> <a href="tip/tip.html"> Exercise 1 (Tip) </a> </li>
+      <li> <a href="decoratemytext/decoratemytext.html"> Exercise 2 (DecorateMyText) </a> </li>
+    </ul></li>
+
+    <li>Lesson 6:
+    <ul>
+      <li> <a href=""></a> </li>
+    </ul></li>
+
   </ul>
 
   <p>
