--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <li>Lesson 6:
     <ul>
-      <li> <a href=""></a> </li>
+      <li> <a href="animation/ascii.html">Exercise 1 (animation)</a> </li>
     </ul></li>
 
   </ul>
