--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       <li> <a href="animation/ascii.html">Exercise 1 (animation)</a> </li>
     </ul></li>
 
+    <li>Lesson 7:
+    <ul>
+      <li> <a href="bankingaccount/bank.html">Exercise 1 (bankingAccount)</a> </li>
+    </ul></li>
+
   </ul>
 
   <p>
