--- a/objectPrototype/objectPrototype.html
+++ b/objectPrototype/objectPrototype.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Bike Prototype JS</title>
-    <!-- <script type="text/javascript" src="js/objectPrototype.js"></script> -->
+    <script type="text/javascript" src="js/objectPrototype.js"></script>
     <!-- <script type="text/javascript" src="js/objectPrototypeES6.js"></script> -->
-    <script type="text/javascript" src="js/objectPrototypeConstructor.js"></script>
+    <!-- <script type="text/javascript" src="js/objectPrototypeConstructor.js"></script> -->
   </head>
   <body>
     <h1>See Results in the Console</h1>
+    <br />
+    <p>
+      There are 3 JS files in the resources.
+      We can run it by uncommenting their respective script tag in this HTML page.
+    </p>
   </body>
 </html>
