Index page updated

--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
       <li> <a href="bankingaccount/bank.html">Exercise 1 (bankingAccount)</a> </li>
     </ul></li>
 
+    <li>Lesson 8:
+    <ul>
+      <li> <a href="objectPrototype/objectPrototype.html">Exercise 1 (Inheritance)</a> </li>
+    </ul></li>
+
   </ul>
 
   <p>
