--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
       <li> <a href="objectPrototype/objectPrototype.html">Exercise 1 (Inheritance)</a> </li>
     </ul></li>
 
+    <li>Lesson 9:
+    <ul>
+      <li> <a href="puzzle/fifteen.html">Exercise 1 (Puzzle)</a> </li>
+    </ul></li>
+
   </ul>
 
   <p>
