--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
       <li> <a href="puzzle/fifteen.html">Exercise 1 (Puzzle)</a> </li>
     </ul></li>
 
+    <li>Lesson 9:
+    <ul>
+      <li> <a href="ajax/ex1/output.html">Exercise 1 (Same Origin Request)</a> </li>
+      
+    </ul></li>
+
   </ul>
 
   <p>
