ajax fetch api exercise 2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <li>Lesson 9:
     <ul>
       <li> <a href="ajax/ex1/output.html">Exercise 1 (Same Origin Request)</a> </li>
-      
+      <li> <a href="ajax/ex2/user.html">Exercise 2 (User Details Ajax)</a> </li>
     </ul></li>
 
   </ul>
