--- a/ajax/ex1/output.html
+++ b/ajax/ex1/output.html
@@ -8,7 +8,7 @@
 
 	<head>
 		<title>Output Comparison Tool</title>
-		</script><script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 		<script src="output.js" type="text/javascript"></script>
 	</head>
 
