ajax assignment final

--- a/ajax/ex2/user.html
+++ b/ajax/ex2/user.html
@@ -16,9 +16,9 @@
 
     <div class="main-div">
       <h2>User Details</h2>
-      <div class=""> <label>Name: </label><span id="userName"></span>  </div>
-      <div class=""> <label>Email: </label><span id="userEmail"></span>  </div>
-      <div class=""> <label>Address: </label><span id="userAddr"></span>  </div>
+      <div class=""> <label><em>Name: </em></label><span id="userName"></span>  </div>
+      <div class=""> <label> <em>Email: </em> </label><span id="userEmail"></span>  </div>
+      <div class=""> <label> <em>Address: </em> </label><span id="userAddr"></span>  </div>
       <button type="button" id="show-post-btn">Show All Posts</button>
 
       <div id="all-post">
